# hackcu

./: .gitignore  Aptfile  LICENSE  Procfile  README.md  requirements.txt
image_captioning/: model.py  sample.py
justcaptionthis/: pyproject.toml
justcaptionthis/justcaptionthis/: listener.py  main.py  utils.py
justcaptionthis/justcaptionthis/config/: private.cnf.example
justcaptionthis/tests/: test_justcaptionthis.py
ocr/: utils.py
