[tool.poetry]
name = "justcaptionthis"
version = "0.1.0"
description = ""
authors = ["polmes <pol.developer1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tweepy = "^3.8.0"
requests = "^2.23.0"
pandas = "^1.0.1"
Pillow = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
